fixed logo alignment issue

--- a/styles.css
+++ b/styles.css
@@ -163,7 +163,7 @@ a{
 }
 .feature-3 .content .item{
     display: grid;
-    grid-template-rows: 3fr 1fr 3fr;
+    grid-template-rows: 2fr 1fr 3fr;
     gap: 1rem;
 }
 .feature-3 .item .heading{
